Bug 473855 - In Plugins Configure settings, the configure buttons of plugins are not visible on some languages
Summary: In Plugins Configure settings, the configure buttons of plugins are not visib...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 5.24.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-28 14:04 UTC by Andrew Shark
Modified: 2024-11-22 20:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.0
Sentry Crash Report:


Attachments
In english locale, plugins configure buttons may be observed (246.87 KB, image/png)
2023-08-28 14:06 UTC, Andrew Shark
Details
In russian locale, plugins configure buttons are not visible until scroll right (237.92 KB, image/png)
2023-08-28 14:09 UTC, Andrew Shark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Shark 2023-08-28 14:04:41 UTC
I wanted to configure some plugin in KMail, and was very confused that it has no configuration button. But then I realized that it is just not visible because there is horizontal scrollbar.

STEPS TO REPRODUCE
1. Set the KMail localisation to Russian language and restart Kmail.
2. Open Settings ("Настройка") -> Configure KMail ("Настроить KMail").
3. Open Plugins ("Модули") category.
4. Try to configure the New mail notification plugin.

OBSERVED RESULT
You cannot see its configuration button. See screenshot. You need to scroll right to be able to see it.

EXPECTED RESULT
The configuration button should always be visible.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10
Graphics Platform: Wayland
KMail: 5.24.0 (23.08.0)

ADDITIONAL INFORMATION
You can try other languages too. With German for example, they are half-shown.
Also, I am interested, what is the purpose of that big text field on the right? It is _just_ for showing the one-liner plugin description? If so, why not get rid of it and add the plugin description under it when selecting one?
Comment 1 Andrew Shark 2023-08-28 14:06:21 UTC
Created attachment 161242 [details]
In english locale, plugins configure buttons may be observed
Comment 2 Andrew Shark 2023-08-28 14:09:49 UTC
Created attachment 161243 [details]
In russian locale, plugins configure buttons are not visible until scroll right
Comment 3 Laurent Montel 2024-11-22 20:52:13 UTC
Git commit 2042303e946dd9df2f9c702087dd257a35ef6b88 by Laurent Montel.
Committed on 22/11/2024 at 20:51.
Pushed by mlaurent into branch 'release/24.12'.

Fix BUG:473855 In Plugins Configure settings, the configure buttons of plugins are not visible on some languages(edit)
FIXED-IN: 24.12.0

M  +5    -0    src/pimcommon/CMakeLists.txt
M  +1    -12   src/pimcommon/configureplugins/autotests/configurepluginswidgettest.cpp
M  +5    -12   src/pimcommon/configureplugins/configurepluginslistwidget.cpp
M  +0    -3    src/pimcommon/configureplugins/configurepluginslistwidget.h
A  +64   -0    src/pimcommon/configureplugins/configurepluginstreewidgetdelegate.cpp     [License: GPL(v2.0+)]
A  +20   -0    src/pimcommon/configureplugins/configurepluginstreewidgetdelegate.h     [License: GPL(v2.0+)]
M  +2    -33   src/pimcommon/configureplugins/configurepluginswidget.cpp
M  +0    -6    src/pimcommon/configureplugins/configurepluginswidget.h

https://invent.kde.org/pim/pimcommon/-/commit/2042303e946dd9df2f9c702087dd257a35ef6b88