Fix BUG:473855 In Plugins Configure settings, the configure buttons of plugins are not visible on some languages(edit)

BUG: 473855
FIXED-IN: 24.12.0